--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,20 @@
-name: Pytest
+name: ci
 
-on: [push]
+# Controls when the workflow will run
+on:
+
+  # Trigger the workflow on all pushes
+  push:
+    branches:
+    - '**'
+    tags:
+    - '**'
+
+  # Trigger the workflow on all pull requests
+  pull_request: ~
+
+  # Allow workflow to be dispatched on demand
+  workflow_dispatch: ~
 
 jobs:
   build:
@@ -31,3 +45,25 @@ jobs:
         run: |
           pip install pytest
           pytest -m "not network"
+
+  # Calls a reusable CI workflow to qa, test & deploy the current repository.
+  #   It will pull in all needed dependencies and produce a code coverage report on success.
+  #   If all checks were successful and a new release tag pushed, the package will be published on PyPI.
+  #   In case the job fails, a message will be posted to a Microsoft Teams channel.
+  ci:
+    name: ci
+    uses: ecmwf-actions/reusable-workflows/.github/workflows/ci-python.yml@v1
+    with:
+      codecov_upload: true
+      # notify_teams: true
+      build_package_inputs: |
+        dependencies: |
+          ecmwf/ecbuild
+          ecmwf/eckit
+          ecmwf/odc
+        dependency_branch: develop
+        self_build: false
+    # secrets:
+      # pypi_username: ${{ secrets.PYPI_USERNAME }}
+      # pypi_password: ${{ secrets.PYPI_PASSWORD }}
+      # incoming_webhook: ${{ secrets.MS_TEAMS_INCOMING_WEBHOOK }}
