--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ markers = [
     "network", # For slow tests that interface with live APIs, not good for CI
 ]
 
+[tool.black]
+line-length = 120
+
 [tool.isort]
 profile = "black"
-skip_gitignore = true
+line_length = 120
