Prevent network tests from running by default

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ build-backend = "setuptools.build_meta"
 markers = [
     "network", # For slow tests that interface with live APIs, not good for CI
 ]
+addopts = [
+    "-m not network", # do not run networks tests by default
+]
 
 [tool.black]
 line-length = 120
@@ -13,3 +16,6 @@ line-length = 120
 [tool.isort]
 profile = "black"
 line_length = 120
+
+[tool.ruff]
+line-length = 120
