--- a/setup.cfg
+++ b/setup.cfg
@@ -2,11 +2,11 @@
 name = obsproc
 version = 0.0.1
 author = ECMWF
-author_email = 
-description = 
+author_email =
+description =
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = 
+url =
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: The 3-Clause BSD License
@@ -33,6 +33,9 @@ dev =
     pytest
     black
     ruff
+    flake8
+    pre-commit
+    isort
 
 [options.packages.find]
 where = src
