Add a header and useragent to the scraper

--- a/example_secrets.yaml
+++ b/example_secrets.yaml
@@ -1,4 +1,13 @@
 ---
+# This is an example for the expected format of secrets.yaml
+# Do not put anything secret in here because if you accidentally commit it to Github
+# those credentials will be compromised. Copy this to secrets.yaml and edit it,
+# secrets.yaml is in the .gitignore so is more difficult to accidentally commit.
+
+headers: # This allows server operators to contact you if you're sending too many requests
+    'User-Agent': 'ECMWF IOT Scraper'
+    'From': 'your.name@ecmwf.int'
+
 CIMA_API:
   client_id : XXXXXXXXXX
   client_secret : XXXXXX
