add typing to the CIMA API

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,13 @@ dev =
     pre-commit
     isort
     responses
+    # The following packages just add typing for Mypy
+    pandas-stubs
+    types-oauthlib
+    types-requests
+    munch-stubs
+    types-oauthlib
+    types-requests
 
 [options.packages.find]
 where = src
