Squashed commit of the following:
commit 5b137c5107b0af507a882500a3ec8c264db7288b
Author: Tom <thomas.hodson@ecmwf.int>
Date:   Mon Jul 10 15:08:56 2023 +0100

    Start on some simple documentation

commit f9b2c78bd20fe8e3bc7c8552c2533929efec9e41
Author: Tom <thomas.hodson@ecmwf.int>
Date:   Wed Jul 5 14:24:42 2023 +0100

    update config

commit 43d58c7f7ec799801b97ffffacf0f99a5b533514
Author: Tom <thomas.hodson@ecmwf.int>
Date:   Wed Jul 5 14:24:23 2023 +0100

    remove notebooks from git

commit 41a5ed277f7d06fbfb54391f2be48f6c6103137b
Author: Tom <thomas.hodson@ecmwf.int>
Date:   Wed Jul 5 14:23:16 2023 +0100

    general refactoring

commit d5d35bcf47c61d12dea3e244225ea409d2d343d3
Author: Tom <thomas.hodson@ecmwf.int>
Date:   Wed Jul 5 14:22:07 2023 +0100

    remove stuff fluff

commit 4598fa2f2f20ee630d0c99de09bff8c8af662901
Author: Tom <thomas.hodson@ecmwf.int>
Date:   Sun Jul 2 10:47:57 2023 +0200

    make offline meteotracker work

commit 05cf80d6d03dc34c0d38b8fd40f12cab91855a6b
Author: Tom <thomas.hodson@ecmwf.int>
Date:   Sun Jul 2 10:42:37 2023 +0200

    improve how meteotracker source handles geo boundaries

commit e34e919dedc2441b205972a126fd3fa4f339e706
Author: Tom <thomas.hodson@ecmwf.int>
Date:   Thu Jun 29 10:32:58 2023 +0200

    update config

commit eb2b7034a1f7d23b9745326ac0ad0801baeaf8ef
Author: Tom <thomas.hodson@ecmwf.int>
Date:   Thu Jun 29 10:31:26 2023 +0200

    update matching and metadata, remove Sink class

commit 245f942279907e0e1adfe345a259b5a54baa064c
Author: Tom <thomas.hodson@ecmwf.int>
Date:   Thu Jun 29 10:19:38 2023 +0200

    Update canonical_variables.yaml

commit b6f65b74c5e312b2056639deec2af4c3e838db1f
Author: Tom <2063944+TomHodson@users.noreply.github.com>
Date:   Thu Jun 15 16:43:33 2023 +0100

    ignore odbs

commit 022722013a735327942db945a15cb41916a70fd3
Author: Tom <2063944+TomHodson@users.noreply.github.com>
Date:   Thu Jun 15 16:43:00 2023 +0100

    rename Column and copy canonical_variable onto InputColum

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 .idea/*
 venv/*
+__pycache__
+*.egg-info
+.*_cache
+
+secrets.yaml
+.DS_Store
+data/
+.ipynb_checkpoints/
+*.odb
+*.ipynb
+examples/notebooks/
+docs/_build/
