--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,8 @@ install_requires =
     argparse
     dataclass_wizard
     watchdog
+    shapely
+    pyyaml-include
 
 
 [options.extras_require]
