--- a/setup.cfg
+++ b/setup.cfg
@@ -50,6 +50,8 @@ dev =
     types-requests
     munch-stubs
     types-requests
+    bs4 # For sensor.community
+    lxml
 
 [options.packages.find]
 where = src
