Squashed commit of the following:
commit 2f6b750dc675e237053110bd96ba2ff010b1f3d9
Author: Tom <thomas.hodson@ecmwf.int>
Date:   Thu Sep 7 16:28:25 2023 +0100

    Update config.yaml

commit 928819429d800ec564fc8b7f6ec112139dcc48cc
Author: Tom <thomas.hodson@ecmwf.int>
Date:   Thu Sep 7 16:28:19 2023 +0100

    Delete preprocessing_pipeline.py

commit 11daea00ddb77728e21b39dbba2ef8f4b22a7ede
Author: Tom <thomas.hodson@ecmwf.int>
Date:   Tue Aug 29 14:35:42 2023 +0100

    Make the CSV parser support messages

commit 3ad5b5dc475248a98a5510d6af2cb9333629cb26
Author: Tom <thomas.hodson@ecmwf.int>
Date:   Tue Aug 29 14:35:13 2023 +0100

    Fix some bugs

commit b467f63e6a2be552834ee6f6973c45fbbfb4f529
Author: Tom <thomas.hodson@ecmwf.int>
Date:   Tue Aug 29 14:34:39 2023 +0100

    Put dependencies in the right place

--- a/examples/config.yaml
+++ b/examples/config.yaml
@@ -28,6 +28,7 @@ pipeline:
 
 sources:
   - name: MeteoTrackerOfflineSource #Can use either MeteoTrackerOfflineSource or MeteoTrackerSource
+    source: MeteoTracker
     cache_directory: data/inputs/meteotracker
     secrets_file: secrets.yaml
     start_date: "2022-05-25"
@@ -39,17 +40,18 @@ sources:
       - name: offset_tz
 
 
-  # - name: CIMASource
-  #   cache_directory: data/inputs/cima
-  #   secrets_file: secrets.yaml
-  #   start_date: "2023-05-22"
-  #   end_date: "2023-05-24"
-  #   frequency: 3D # 3 days is the max API request
-  #   static_metadata_columns:
-  #     - name: station_id
-  #       key: id
-  #     - name: lat
-  #     - name: lon
+  - name: CIMASource
+    source: CIMA
+    cache_directory: data/inputs/cima
+    secrets_file: secrets.yaml
+    start_date: "2023-05-22"
+    end_date: "2023-05-24"
+    frequency: 3D # 3 days is the max API request
+    static_metadata_columns:
+      - name: station_id
+        key: id
+      - name: lat
+      - name: lon
 
   - name: MultiFileSource
     source: sensor.community
