Add a CSV file chunker

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,7 @@ install_requires =
     pyyaml-include
     bs4 # For sensor.community
     lxml
+    dataclass_wizard # TODO: excise this
 
 
 [options.extras_require]
