--- a/notebooks/sensor.community/config/config.yaml
+++ b/notebooks/sensor.community/config/config.yaml
@@ -74,37 +74,101 @@ parsers:
         key: timestamp
         type: datetime
 
-
+    # the following identifies the data in the monthly CSV's
     metadata_columns:
-      - name: station_id
+      - name: sensor_id
         key: sensor_id
       - name: sensor_type
+        key: sensor_module
       - name: location
+        key: station_id
+
       - name: lat
         unit: "°"
       - name: lon
         unit: "°"
-      # - name: air_pressure_near_surface
+      # - name: pressure
       #   key: pressure
       #   unit: Pa
       # - name: altitude
       #   unit: m
 
+    sensor_module:
+    # do NOT use sensor module dht22! And sensor module ppd42ns has weird units that we need to check first 
+      - name: sds11
+        observations: [P1, P2]
+        range: [0, 999]
+        precision: 10  # plusminus in "um m^-3"
+
+      - name: pms30003
+        observations: [P0, P1, P2]
+        range: [0, 1000]
+        precision: 10 # plusminus in "um m^-3"
+
+      - name: pms50003
+        observations: [P0, P1, P2]
+        range: [0, 1000]
+        precision: 10 # plusminus in "um m^-3"
+
+      - name: pms30003
+        observations: [P0, P1, P2]
+        range: [0, 1000]
+        precision: 10 # plusminus in "um m^-3"
+
+      - name: hpm
+        observations: [P1, P2]
+        range: [0, 1000]
+        precision: 15 # plusminus in "um m^-3"
+
+      - name: bme280
+        observations: [humidity, pressure, temperature]
+        range: [[0, 100], [-40, 85], [300, 1100]] # in ["%", "degC", "Pa"]
+        precision: [3, 1, 1] # plusminus
+
+      - name: bmp280
+        observations: [pressure, temperature]
+        range: [[-40, 85], [300, 1100]] # in ["degC", "Pa"]
+        precision: [1, 1] # plusminus
+
+      - name: bmp180
+        observations: [pressure, temperature]
+        range: [[-40, 85], [300, 1100]] # in ["degC", "Pa"]
+        precision: [1, 1] # plusminus
+
+      - name: ds18b20
+        observations: [temperature]
+        range: [-55, 125] # in "degC"
+        precision: 0.5 # plusminus
+
+      - name: htu21d
+        observations: [temperature, humidity]
+        range: [[-40, 125], [0, 100]] # in ["degC", "%"]
+        precision: [0.3, 2] # plusminus
+
+
+
 
     value_columns:
-      - name: air_temperature_near_surface
-        key: temperature
+      - name: temperature
+        key: air_temperature
         unit: "°C"
-      - name: relative_humidity_near_surface
-        key: humidity
+      - name: humidity
+        key: relative_humidity
         unit: "%"
-      - name: pressure_sealevel
-        unit: Pa
+      - name: pressure
+        key: pressure
+        unit: "Pa"    # I see some random values in hPa, and this is also what is stated in the documentation by sensor.community
+      - name: altitude
+        key: altitude
+        unit: "m"
 
+      - name: P0
+        key: particulate_matter_1um
+        unit: "um m^-3"
       - name: P1
-      - name: durP1
-      - name: ratioP1
-
+        key: particulate_matter_10um
+        unit: "um m^-3"
       - name: P2
-      - name: durP2
-      - name: ratioP2
+        key: particulate_matter_2.5um
+        unit: "um m^-3"
+
