--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = obsproc
+name = ionbeam
 version = 0.0.1
 author = ECMWF
 author_email =
@@ -35,6 +35,7 @@ install_requires =
     bs4 # For sensor.community
     lxml
     dataclass_wizard # TODO: excise this
+    pika
 
 
 [options.extras_require]
