--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = ionbeam
 version = 0.0.1
-author = ECMWF
-author_email =
-description =
+author = Tom Hodson (ECMWF)
+author_email = thomas.hodson@ecmwf.int
+description = A streaming library for IoT data.
 long_description = file: README.md
 long_description_content_type = text/markdown
 url =
