Fix singleprocess pipeline

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,8 +34,8 @@ install_requires =
     pyyaml-include
     bs4 # For sensor.community
     lxml
-    dataclass_wizard # TODO: excise this
     pika
+    rich
 
 
 [options.extras_require]
