Revert "acronet mars"
This reverts commit 9b37bc70aaed268828af91418802925aee6c1e4a.

--- a/notebooks/acronet/config/MARS_keys.yaml
+++ b/notebooks/acronet/config/MARS_keys.yaml
@@ -32,99 +32,118 @@
 #   column_description: custom
 #   fill_method: from_config
 
-- name: entryno@body          # this is a given
+- name: entryno@body
   fill_method: constant
   value: 1
   column_description: entry sq. no.
   dtype: INTEGER
 
-# for now, we prepare and ingest temperature and humidity, and air quality data
 - name: varno@body
-  fill_method: from_config    # value: rh2m: 58; t2m: 39; still checking ADS/CAMS for particulate matter_10um and particulate_matter_2.5um 
+  fill_method: from_config
   column_description: variable number
   dtype: INTEGER
 
-- name: obstype@hdr           # https://codes.ecmwf.int/odb/obstype/
-  fill_method: constant
-  value: 1                    # we go with synop for now
-  dtype: INTEGER
-
-- name: statid@hdr            # this is set for our dev work
+- name: statid@hdr
   fill_method: constant
   value: ++++xxxx
+  column_description: station id (character*8)
   dtype: STRING
 
-- name: codetype@hdr # value 17 for Automatic Land SYNOP
-  fill_method: constant
-  value: 17
-  column_description: observation codetype
+- name: obstype@hdr
+  fill_method: from_config
+  column_description: observation type
   dtype: INTEGER
 
-- name: project@hdr 
-  fill_method: constant
-  value: iCHANGE
-  column_description: project name
-  dtype: STRING
+- name: codetype@hdr
+  fill_method: from_config
+  column_description: observation code type
+  dtype: INTEGER
 
 - name: source@hdr
-  value: CIMA 
+  fill_method: function
+  key: source
   column_description: 'source id of obs. (character*8) : re-analysis purposes'
   dtype: STRING
 
-  # This should be the station_id from the datasets 
+  # This on should be some incremental alphanumeric key based on a mapping
+  # from incoming keys to our 8 byte asci byte output
 - name: stationid@hdr
-  fill_method: from_data    # station_name
-  column_description: variable identifier
-  dtype: STRING 
+  dtype: STRING
+  fill_method: function
+  key: station_id
+  column_description: custom
 
+- name: project@hdr
+  dtype: STRING
+  fill_method: constant
+  value: iCHANGE
+  column_description: custom
+
+  # For now just fixed to "meteotracker" for tracks or "station" for staionary observations 
 - name: dataset@hdr
-  value: station
-  fill_method: constant     
-  column_description: identifier for mobile or stationary observation
-  dtype: INTEGER
+  dtype: STRING
+  fill_method: function
+  key: dataset
+  column_description: custom
 
-- name: groupid@hdr  # 17 for conventional or CONV is a given for us
-  dtype: INTEGER 
+- name: groupid@hdr
+  dtype: INTEGER
   fill_method: constant
   value: 17
   column_description: mars key - observation group
 
+
 - name: reportype@hdr
   dtype: INTEGER
   fill_method: constant
-  value: 16001
-  column_description: mars key - report type for mars
+  value: 16022
+  column_description: mars key - report type for mar
 
 
-- name: class@desc # given
+- name: class@desc
   dtype: INTEGER
   fill_method: constant
   value: 2
   column_description: mars key - ecmwf classification for data
 
-- name: type@desc   # ODB Analysis input "oai" is a given
+
+- name: type@desc
   dtype: INTEGER
   fill_method: constant
   value: 264
   column_description: mars key - type of field used to retrieve data
 
-- name: stream@desc # given
+
+- name: stream@desc
   dtype: INTEGER
   fill_method: constant
   value: 1247
   column_description: mars key - forecasting system used to generate data
 
-- name: expver@desc # given
+
+- name: expver@desc
   dtype: STRING
   fill_method: constant
   value: xxxx
   column_description: mars key - experiment id
 
-- name: levtype@desc # that's a given for us 
+- name: levtype@desc
   dtype: STRING
   fill_method: constant
   value: sfc
-  column_description: mars key for pressure level / surface level
+  column_description: custom
+
+- name: date@hdr
+  dtype: INTEGER
+  column_description: obs. date
+  fill_method: function
+  key: decimal_encoded_date
+
+- name: time@hdr
+  dtype: INTEGER
+  column_description: obs. exact time
+  fill_method: function
+  key: four_digit_hour
 
 - name: andate@desc
   dtype: INTEGER
@@ -135,19 +154,6 @@
 - name: antime@desc
   dtype: INTEGER
   column_description: analysis time
-  fill_method: function
-  key: four_digit_hour
-
-
-- name: date@hdr
-  dtype: INTEGER
-  column_description: obs. date
-  fill_method: function
-  key: decimal_encoded_date
-
-- name: time@hdr
-  dtype: INTEGER
-  column_description: obs. exact time in UTC
   fill_method: function
   key: four_digit_hour
 
@@ -169,6 +175,20 @@
   dtype: REAL
   fill_method: from_data
   key: lon
+
+# The minutes including 2dp fractional part, for track datasets only. 
+- name: min@body
+  dtype: REAL
+  column_description: custom
+  fill_method: function
+  key: minutes_with_fractional_seconds
+
+# surface pressure that acts as an implicit altitude
+# - name: press@body
+#   dtype: REAL
+#   column_description: custom
+#   fill_method: from_data
+#   key: air_pressure_near_surface
 
 # The actual observed value
 - name: obsvalue@body
