--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,9 @@ install_requires =
     pika
     rich
     pe
+    findlibs
+    # aviso @ git+https://github.com/ecmwf/pyfdb@develop
+    pyfdb @ git+https://github.com/ecmwf/pyfdb@develop
 
 
 [options.extras_require]
