get to a reasonable state

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,8 @@ python_requires = >=3.10
 install_requires =
     pandas
     numexpr
-    pyodc>=1.3
+    pyodc @ git+https://github.com/TomHodson/pyodc@test/string_hack
+    pyaviso @ git+https://github.com/ecmwf/aviso@develop
     requests
     oauthlib
     requests-oauthlib
