--- a/setup.cfg
+++ b/setup.cfg
@@ -20,8 +20,9 @@ python_requires = >=3.10
 install_requires =
     pandas
     numexpr
-    pyodc @ git+https://github.com/TomHodson/pyodc@test/string_hack
-    pyaviso @ git+https://github.com/ecmwf/aviso@develop
+    pyodc @ git+https://github.com/TomHodson/pyodc.git@test/string_hack
+    pyaviso @ git+https://github.com/ecmwf/aviso.git@develop
+    pyfdb @ git+https://github.com/ecmwf/pyfdb.git@develop
     requests
     oauthlib
     requests-oauthlib
@@ -39,8 +40,6 @@ install_requires =
     rich
     pe
     findlibs
-    # aviso @ git+https://github.com/ecmwf/pyfdb@develop
-    pyfdb @ git+https://github.com/ecmwf/pyfdb@develop
 
 
 [options.extras_require]
