pin yaml include version to less than 2

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,7 +33,7 @@ install_requires =
     argparse
     watchdog
     shapely
-    pyyaml-include
+    pyyaml-include >= 1.4, < 2.0 # Todo: refactor code to support version 2
     bs4 # For sensor.community
     lxml
     pika
