--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,7 @@ python_requires = >=3.10
 install_requires =
     pandas
     numexpr
-    pyodc @ git+https://github.com/TomHodson/pyodc.git@test/string_hack # Todo: replace with develop version with env variable
+    pyodc @ git+https://github.com/TomHodson/pyodc.git@develop
     pyaviso @ git+https://github.com/ecmwf/aviso.git@develop
     pyfdb @ git+https://github.com/ecmwf/pyfdb.git@develop
     requests
@@ -45,6 +45,8 @@ install_requires =
     geoalchemy2
     jinja2
     psycopg2-binary
+    wurlitzer # For printing C++ output in the console
+    cachetools
 
 [options.extras_require]
 dev =
