--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,7 @@ install_requires =
     pyodc @ git+https://github.com/TomHodson/pyodc.git@develop
     pyaviso @ git+https://github.com/ecmwf/aviso.git@develop
     pyfdb @ git+https://github.com/ecmwf/pyfdb.git@develop
+    polytope @ git+https://github.com/ecmwf/polytope-client.git@develop
     requests
     oauthlib
     requests-oauthlib
